--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==2.1.0
 attrs==23.2.0
 cffi==1.16.0
+comtypes==1.3.0
 contourpy==1.2.0
 cycler==0.12.1
 flatbuffers==23.5.26
@@ -13,7 +14,9 @@ opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
 packaging==23.2
 pillow==10.2.0
+playsound==1.3.0
 protobuf==3.20.3
+psutil==5.9.8
 pycparser==2.21
 pyparsing==3.1.1
 python-dateutil==2.8.2
